# ru.mail.park

AlgHW/AlgHW1/: FixedPointUInt.hpp  FixedPointUint.cpp  main.cpp  АСД Сёмин ДЗ1.docx
AlgHW/AlgHW2/: CMakeLists.txt  String.cpp  String.hpp  main.cpp  АСД Сёмин ДЗ2.docx
AlgHW/AlgHW3/: FileWrapper.cpp  FileWrapper.hpp  input.txt  main.cpp  mergeSort.hpp  utils.hpp
PREP-HW/HW1/: README.md  input.txt  main.c
PREP-HW/HW2/: input.txt  main.c  matrix.c  matrix.h
PREP-HW/HW3/: CMakeLists.txt  DynamicList.c  DynamicList.h  main.c
PREP-HW/HW5/: AppliedFuncs.cpp  AppliedFuncs.hpp  CMakeLists.txt  Customer.cpp  Customer.hpp  main.cpp
PREP-HW/HW6/: CMakeLists.txt  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp  main.cpp
PREP-HW/HW7/: CMakeLists.txt  String.cpp  String.hpp  Vector.hpp  main.cpp
PREP-HW/HW8/: CMakeLists.txt  WordSorter.cpp  WordSorter.hpp  main.cpp
amtrs/: README.md  manage.py  templates-0.2.7z
amtrs/Fish/: ask.html  base.html  base1.html  index.html  login.html  question.html  register.html  settings.html  statstyles.css
amtrs/Fish/js/: passwordValidator.js
amtrs/amtrs/: settings.py  urls.py  wsgi.py
amtrs/questions/: admin.py  admin.py.save  forms.py  models.py  urls.py  views.py
amtrs/questions/migrations/: 0001_initial.py  0002_auto_20170421_2141.py  0003_auto_20170523_1159.py  0004_auto_20170622_1549.py
amtrs/static/: statstyles.css
amtrs/templates/: ask.html  base.html  base1.html  bytag.html  index.html  login.html  paginator.html  question.html  register.html
